# pomodoro-tauri-react

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  config.ts  main.tsx  style.ts  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/resources/: data.json
src-tauri/src/: main.rs  tray.rs  utils.rs
src/components/: AppBar.tsx  FootBar.tsx  OperationButton.tsx  OperationCom.tsx  RefreshButton.tsx  RefreshCom.tsx  TimeCounter.tsx  TimeCounterCom.tsx  TodayCountCom.tsx  WorkTypeCom.tsx
src/enum/: index.ts
src/hooks/: httpClient.ts  renderProps.ts  useAsync.ts  useAudio.ts  usePrevious.ts  useSingleton.ts  userArticle.ts
src/icons/: close.tsx  palette.tsx  pause.tsx  play.tsx  refresh.tsx  volume-mute.tsx  volume.tsx
src/store/: local.ts  store.ts
src/utils/: index.ts
